--- a/Halloapp/nl.lproj/Localizable.strings
+++ b/Halloapp/nl.lproj/Localizable.strings
@@ -1132,6 +1132,9 @@
 /* Message action. Verb. */
 "message.delete" = "Verwijderen";
 
+/* Call to action to forward a message */
+"message.forward" = "Doorsturen";
+
 /* Message action. Verb. */
 "message.reply" = "Beantwoorden";
 
@@ -1372,10 +1375,12 @@
 /* Header when selecting all or some contacts to share with */
 "post.privacy.header.contacts" = "Wie kan deze post zien";
 
-/* Header when selecting a group to share with */
+/* Header when selecting a group to share with
+   Header when selecting groups to share with */
 "post.privacy.header.groups" = "Alleen delen met een groep";
 
-/* Controller title for changing destination and privacy */
+/* Controller title for changing destination and privacy
+   Header when selecting contacts to share with */
 "post.privacy.title" = "Delen Met...";
 
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
