--- a/Halloapp/pl.lproj/Localizable.strings
+++ b/Halloapp/pl.lproj/Localizable.strings
@@ -1219,10 +1219,12 @@
 /* Header when selecting all or some contacts to share with */
 "post.privacy.header.contacts" = "Kto zobaczy ten post";
 
-/* Header when selecting a group to share with */
+/* Header when selecting a group to share with
+   Header when selecting groups to share with */
 "post.privacy.header.groups" = "Udostępnij tylko grupie";
 
-/* Controller title for changing destination and privacy */
+/* Controller title for changing destination and privacy
+   Header when selecting contacts to share with */
 "post.privacy.title" = "Udostępnij...";
 
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
