--- a/Halloapp/ru.lproj/Localizable.strings
+++ b/Halloapp/ru.lproj/Localizable.strings
@@ -1309,10 +1309,12 @@
 /* Header when selecting all or some contacts to share with */
 "post.privacy.header.contacts" = "Кто увидит этот пост";
 
-/* Header when selecting a group to share with */
+/* Header when selecting a group to share with
+   Header when selecting groups to share with */
 "post.privacy.header.groups" = "Поделиться только с группой";
 
-/* Controller title for changing destination and privacy */
+/* Controller title for changing destination and privacy
+   Header when selecting contacts to share with */
 "post.privacy.title" = "Поделиться с ...";
 
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
